--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Werkzeug==3.0.1
 PyJWT==2.8.0
 python-dotenv==1.0.0
 boto3==1.0.0
-Flask-Cors==3.0.0
+Flask-CORS==4.0.0
 flask-socketio
 pydantic
 pydantic[email]
