--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Flask-JWT-Extended==4.6.0
 Werkzeug==3.0.1
 PyJWT==2.8.0
 python-dotenv==1.0.0
-boto3==1.0.0
+boto3
 Flask-CORS==4.0.0
 flask-socketio
 pydantic
